--- a/project.html
+++ b/project.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/nav.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/project.css">
+    <link rel="stylesheet" href="./css/nav.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/project.css">
     <script src="../js/project.js"></script>
     <title>Project</title>
 </head>
@@ -24,7 +24,7 @@
     <div id="container">
         <article onclick="gotoUrl('http\://damparking.dothome.co.kr')">
             <div class="project">
-                <img class="img-size" src="../image/damparking.JPG" alt="php" />
+                <img class="img-size" src="./image/damparking.JPG" alt="php" />
                 <h2>DamParking</h2>
                 PHP PROJECT
             </div>
@@ -32,15 +32,15 @@
 
         <article>
             <div class="project">
-                <img class="img-size" src="../image/pianotile.JPG" alt="c" />
+                <img class="img-size" src="./image/pianotile.JPG" alt="c" />
                 <h2>PianoTile</h2>
                 C PROJECT
             </div>
         </article>
 
-        <article onclick="gotoUrl('http\://damportfolio.dothome.co.kr/')">
+        <article onclick="gotoUrl('https\://cho-hadam.github.io/dam-portfolio/')">
             <div class="project">
-                <img class="img-size" src="../image/portfolio.JPG" alt="html" />
+                <img class="img-size" src="./image/portfolio.JPG" alt="html" />
                 <h2>HadamPortfolio</h2>
                 HTML PROJECT
             </div>
@@ -48,7 +48,7 @@
 
         <article>
             <div class="project">
-                <img class="img-size" src="../image/hahaparking.jpg" alt="java" />
+                <img class="img-size" src="./image/hahaparking.jpg" alt="java" />
                 <h2>HahaParking</h2>
                 JAVA PROJECT
             </div>
