--- a/resume.html
+++ b/resume.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/nav.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/contact.css">
-    <title>Project</title>
+    <link rel="stylesheet" href="./css/nav.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/resume.css">
+    <title>Resume</title>
 </head>
 <body>
     <header>
@@ -21,8 +21,18 @@
     </header>
 
     <div id="container">
-        <section>
-
+        <section id="resume">
+            <ul>
+                <li>
+                    <h3>2013</h3> 송남초등학교 입학
+                </li>
+                <li>
+                    <h3>2016</h3> 송남중학교 입학
+                </li>
+                <li>
+                    <h3>2019</h3> 미림여자정보과학고등학교 입학
+                </li>
+            </ul>
         </section>
     </div>
 
