--- a/project.html
+++ b/project.html
@@ -22,7 +22,7 @@
     </header>
 
     <div id="container">
-        <article onclick="gotoUrl('http\://damparking.dothome.co.kr')">
+        <article onclick="gotoUrl('https\://damparking.dothome.co.kr')">
             <div class="project">
                 <img class="img-size" src="./image/damparking.JPG" alt="php" />
                 <h2>DamParking</h2>
