--- a/project.html
+++ b/project.html
@@ -22,7 +22,7 @@
     </header>
 
     <div id="container">
-        <article onclick="gotoUrl('https\://damparking.dothome.co.kr')">
+        <article>
             <div class="project">
                 <img class="img-size" src="./image/damparking.JPG" alt="php" />
                 <h2>DamParking</h2>
@@ -38,7 +38,7 @@
             </div>
         </article>
 
-        <article onclick="gotoUrl('https\://cho-hadam.github.io/dam-portfolio/')">
+        <article>
             <div class="project">
                 <img class="img-size" src="./image/portfolio.JPG" alt="html" />
                 <h2>HadamPortfolio</h2>
