--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="container">
         <section>
             <div>
-                <img class="user-image" src="../image/hadam.JPG" alt="hadam">
+                <img class="user-image" src="./image/hadam.JPG" alt="hadam">
             </div>
             <div class="profile">
                 <ul>
@@ -43,10 +43,10 @@
                         SNS
                         <p class="icon-margin">
                             <a href="https://www.facebook.com/profile.php?id=100009669824694" target="_blank">
-                                <img class="ico-size" src="../image/facebook-icon.png" alt="facebook">
+                                <img class="ico-size" src="./image/facebook-icon.png" alt="facebook">
                             </a>
                             <a href="insta" target="_blank">
-                                <img class="ico-size" src="../image/instagram-icon.png" alt="instagram">
+                                <img class="ico-size" src="./image/instagram-icon.png" alt="instagram">
                             </a>
                         </p>
                     </li>
