--- a/index.html
+++ b/index.html
@@ -11,52 +11,57 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav-lists">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="resume.html">RESUME</a></li>
                 <li><a href="project.html">PROJECT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
+            <div class="burger">
+                <div class="burger1"></div>
+                <div class="burger2"></div>
+                <div class="burger3"></div>
+            </div>
         </nav>
     </header>
 
     <div id="container">
-        <section>
-            <img class="user-image" src="./image/hadam.JPG" alt="hadam">
-            <div class="profile">
-                <ul>
-                    <li>
-                        <div class="name">조하닮</div><br>
-                        CHO HADAM
-                    </li>
-                    <li>
-                        생년월일<br>
-                        2003. 04. 09
-                    </li>
-                    <li>
-                        학교<br>
-                        미림여자정보과학고등학교
-                    </li>
-                    <li>
-                        SNS
-                        <p class="icon-margin">
-                            <a href="https://www.facebook.com/profile.php?id=100009669824694" target="_blank">
-                                <img class="ico-size" src="./image/facebook-icon.png" alt="facebook">
-                            </a>
-                            <a href="https://www.instagram.com/dam_49__" target="_blank">
-                                <img class="ico-size" src="./image/instagram-icon.png" alt="instagram">
-                            </a>
-                        </p>
-                    </li>
-                </ul>
+        <section class="profile">
+            <div class="user-image">
+                <img src="./image/hadam.JPG" alt="hadam">
             </div>
+            <ul class="profile-lists">
+                <li>
+                    <h1>조하닮</h1>
+                    CHO HADAM
+                </li>
+                <li>
+                    <h3>생년월일</h3>
+                    2003. 04. 09
+                </li>
+                <li>
+                    <h3>학교</h3>
+                    미림여자정보과학고등학교
+                </li>
+                <li>
+                    SNS
+                    <p class="sns-icon">
+                        <a href="https://www.facebook.com/profile.php?id=100009669824694" target="_blank">
+                            <img src="./image/facebook-icon.png" alt="facebook">
+                        </a>
+                        <a href="https://www.instagram.com/dam_49__" target="_blank">
+                            <img src="./image/instagram-icon.png" alt="instagram">
+                        </a>
+                    </p>
+                </li>
+            </ul>
         </section>
     </div>
 
     <footer>
         <div>
-            <h3>phone</h3> 010-0000-0000<br />
-            <h3>e-mail</h3> s2019w16@e-mirim.hs.kr<br /><br />
+            <h4>phone</h4> 010-0000-0000<br />
+            <h4>e-mail</h4> s2019w16@e-mirim.hs.kr<br /><br />
             Copyright 2019. Cho Hadam All right reserved.
         </div>
     </footer>
