--- a/index.html
+++ b/index.html
@@ -59,9 +59,17 @@
     </div>
 
     <footer>
-        <div>
-            <h4>phone</h4> 010-0000-0000<br />
-            <h4>e-mail</h4> s2019w16@e-mirim.hs.kr<br /><br />
+        <ul class="footer-lists">
+            <li>
+                <h4>phone</h4>
+                010-0000-0000
+            </li>
+            <li>
+                <h4>e-mail</h4>
+                s2019w16@e-mirim.hs.kr
+            </li>
+        </ul>
+        <div class="copy">
             Copyright 2019. Cho Hadam All right reserved.
         </div>
     </footer>
