--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
 
-    <div id="container">
+    <main>
         <section class="profile">
             <div class="user-image">
                 <img src="./image/hadam.JPG" alt="hadam">
@@ -44,18 +44,18 @@
                     미림여자정보과학고등학교
                 </li>
                 <li>
-                    SNS
-                    <p class="sns-icon">
+                    <h3>SNS</h3>
+                    <div class="sns-icon">
                         <a href="https://www.facebook.com/profile.php?id=100009669824694" target="_blank">
                             <img src="./image/facebook-icon.png" alt="facebook">
                         </a>
                         <a href="https://www.instagram.com/dam_49__" target="_blank">
                             <img src="./image/instagram-icon.png" alt="instagram">
                         </a>
-                    </p>
+                    </div>
                 </li>
             </ul>
-        </section>
+        </main>
     </div>
 
     <footer>
