resume 구조, 디자인 수정

--- a/resume.html
+++ b/resume.html
@@ -11,18 +11,23 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav-lists">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="resume.html">RESUME</a></li>
                 <li><a href="project.html">PROJECT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
+            <div class="burger">
+                <div class="burger1"></div>
+                <div class="burger2"></div>
+                <div class="burger3"></div>
+            </div>
         </nav>
     </header>
 
-    <div id="container">
+    <main>
         <section id="resume">
-            <ul>
+            <ul class="resume-lists">
                 <li>
                     <h3>2013</h3> 송남초등학교 입학
                 </li>
@@ -34,12 +39,20 @@
                 </li>
             </ul>
         </section>
-    </div>
+    </main>
 
     <footer>
-        <div>
-            <h3>phone</h3> 010-0000-0000<br />
-            <h3>e-mail</h3> s2019w16@e-mirim.hs.kr<br /><br />
+        <ul class="footer-lists">
+            <li>
+                <h4>phone</h4>
+                010-0000-0000
+            </li>
+            <li>
+                <h4>e-mail</h4>
+                s2019w16@e-mirim.hs.kr
+            </li>
+        </ul>
+        <div class="copy">
             Copyright 2019. Cho Hadam All right reserved.
         </div>
     </footer>
