project .html .css 수정
배경 색, 사진 크기, 박스 크기 조정 등

--- a/project.html
+++ b/project.html
@@ -12,53 +12,58 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav-lists">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="resume.html">RESUME</a></li>
                 <li><a href="project.html">PROJECT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
+            <div class="burger">
+                <div class="burger1"></div>
+                <div class="burger2"></div>
+                <div class="burger3"></div>
+            </div>
         </nav>
     </header>
 
-    <div id="container">
-        <article>
-            <div class="project">
-                <img class="img-size" src="./image/damparking.JPG" alt="php" />
-                <h2>DamParking</h2>
-                PHP PROJECT
-            </div>
+    <main>
+        <article class="project">
+            <img src="./image/damparking.JPG" alt="php" />
+            <h2>DamParking</h2>
+            PHP PROJECT
         </article>
 
-        <article>
-            <div class="project">
-                <img class="img-size" src="./image/pianotile.JPG" alt="c" />
-                <h2>PianoTile</h2>
-                C PROJECT
-            </div>
+        <article class="project">
+            <img src="./image/pianotile.JPG" alt="c" />
+            <h2>PianoTile</h2>
+            C PROJECT
         </article>
 
-        <article>
-            <div class="project">
-                <img class="img-size" src="./image/portfolio.JPG" alt="html" />
-                <h2>HadamPortfolio</h2>
-                HTML PROJECT
-            </div>
+        <article class="project">
+            <img src="./image/portfolio.JPG" alt="html" />
+            <h2>HadamPortfolio</h2>
+            HTML PROJECT
         </article>
 
-        <article>
-            <div class="project">
-                <img class="img-size" src="./image/hahaparking.jpg" alt="java" />
-                <h2>HahaParking</h2>
-                JAVA PROJECT
-            </div>
+        <article class="project">
+            <img src="./image/hahaparking.jpg" alt="java" />
+            <h2>HahaParking</h2>
+            JAVA PROJECT
         </article>
-    </div>
+    </main>
 
     <footer>
-        <div>
-            <h3>phone</h3> 010-0000-0000<br />
-            <h3>e-mail</h3> s2019w16@e-mirim.hs.kr<br /><br />
+        <ul class="footer-lists">
+            <li>
+                <h4>phone</h4>
+                010-0000-0000
+            </li>
+            <li>
+                <h4>e-mail</h4>
+                s2019w16@e-mirim.hs.kr
+            </li>
+        </ul>
+        <div class="copy">
             Copyright 2019. Cho Hadam All right reserved.
         </div>
     </footer>
