--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,17 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav-lists">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="resume.html">RESUME</a></li>
                 <li><a href="project.html">PROJECT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
+            <div class="burger">
+                <div class="burger1"></div>
+                <div class="burger2"></div>
+                <div class="burger3"></div>
+            </div>
         </nav>
     </header>
 
@@ -27,9 +32,17 @@
     </div>
 
     <footer>
-        <div>
-            <h3>phone</h3> 010-0000-0000<br />
-            <h3>e-mail</h3> s2019w16@e-mirim.hs.kr<br /><br />
+        <ul class="footer-lists">
+            <li>
+                <h4>phone</h4>
+                010-0000-0000
+            </li>
+            <li>
+                <h4>e-mail</h4>
+                s2019w16@e-mirim.hs.kr
+            </li>
+        </ul>
+        <div class="copy">
             Copyright 2019. Cho Hadam All right reserved.
         </div>
     </footer>
