모바일 burger nav 추가

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <header>
         <nav>
+            <div class="logo">
+                <h4>HADAM</h4>
+            </div>
             <ul class="nav-lists">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="resume.html">RESUME</a></li>
@@ -73,5 +76,7 @@
             Copyright 2019. Cho Hadam All right reserved.
         </div>
     </footer>
+
+    <script src="nav.js"></script>
 </body>
 </html>
