--- a/project.html
+++ b/project.html
@@ -12,6 +12,9 @@
 <body>
     <header>
         <nav>
+            <div class="logo">
+                <h4>HADAM</h4>
+            </div>
             <ul class="nav-lists">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="resume.html">RESUME</a></li>
