--- a/contact.html
+++ b/contact.html
@@ -49,5 +49,7 @@
             Copyright 2019. Cho Hadam All right reserved.
         </div>
     </footer>
+
+    <script src="nav.js"></script>
 </body>
 </html>
