--- a/resume.html
+++ b/resume.html
@@ -59,5 +59,7 @@
             Copyright 2019. Cho Hadam All right reserved.
         </div>
     </footer>
+
+    <script src="nav.js"></script>
 </body>
 </html>
