--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h4>HADAM</h4>
+                <h4><a href="index.html">HADAM</a></h4>
             </div>
             <ul class="nav-lists">
                 <li><a href="index.html">HOME</a></li>
