--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./fontello/css/fontello.css">
     <title>Home</title>
 </head>
 <body>
@@ -48,12 +49,12 @@
                 </li>
                 <li>
                     <h3>SNS</h3>
-                    <div class="sns-icon">
+                    <div class="sns">
                         <a href="https://www.facebook.com/profile.php?id=100009669824694" target="_blank">
-                            <img src="./image/facebook-icon.png" alt="facebook">
+                            <i class="icon-facebook-circled"></i>
                         </a>
                         <a href="https://www.instagram.com/dam_49__" target="_blank">
-                            <img src="./image/instagram-icon.png" alt="instagram">
+                            <i class="icon-instagram"></i>
                         </a>
                     </div>
                 </li>
