색상 수정 및 홈화면 디자인 변경

--- a/profile.html
+++ b/profile.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/footer.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/profile.css">
     <link rel="stylesheet" href="./fontello/css/fontello.css">
-    <title>Home</title>
+    <title>PROFILE</title>
 </head>
 <body>
     <header>
@@ -31,8 +31,33 @@
 
     <main>
         <section class="profile">
-            <h1>CHO<br />HADAM</h1>
-            <p>Developer</p>
+            <div class="user-img">
+                <img src="./image/hadam2.JPG" alt="">
+            </div>
+            <ul class="profile-lists">
+                <li>
+                    <h1>조하닮</h1>
+                </li>
+                <li>
+                    <h4>생년월일</h4>
+                    2003. 04. 09
+                </li>
+                <li>
+                    <h4>학교</h4>
+                    미림여자정보과학고등학교
+                </li>
+                <li>
+                    <h4>SNS</h4>
+                    <div class="sns">
+                        <a href="https://www.facebook.com/profile.php?id=100009669824694">
+                            <i class="icon-facebook-circled"></i>
+                        </a>
+                        <a href="https://www.instagram.com/dam_49__/">
+                            <i class="icon-instagram"></i>
+                        </a>
+                    </div>
+                </li>
+            </ul>
         </main>
     </div>
 
