--- a/project.html
+++ b/project.html
@@ -12,10 +12,11 @@
     <header>
         <nav>
             <div class="logo">
-                <h4>HADAM</h4>
+                <h4><a href="index.html">PORTFOLIO</a></h4>
             </div>
             <ul class="nav-lists">
                 <li><a href="index.html">HOME</a></li>
+                <li><a href="profile.html">PROFILE</a></li>
                 <li><a href="resume.html">RESUME</a></li>
                 <li><a href="project.html">PROJECT</a></li>
             </ul>
