--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <section class="profile">
             <div class="user-img">
-                <img src="./image/hadam.jpg" alt="">
+                <img src="./image/hadam.JPG" alt="">
             </div>
             <ul class="profile-lists">
                 <li>
