--- a/fontello/demo.html
+++ b/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?32202205');
-      src: url('./font/fontello.eot?32202205#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?32202205') format('woff'),
-           url('./font/fontello.ttf?32202205') format('truetype'),
-           url('./font/fontello.svg?32202205#fontello') format('svg');
+      src: url('./font/fontello.eot?42039135');
+      src: url('./font/fontello.eot?42039135#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?42039135') format('woff'),
+           url('./font/fontello.ttf?42039135') format('truetype'),
+           url('./font/fontello.svg?42039135#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -299,6 +299,8 @@ body {
     <div class="container" id="icons">
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe800"><i class="demo-icon icon-facebook-circled">&#xe800;</i> <span class="i-name">icon-facebook-circled</span><span class="i-code">0xe800</span></div>
+        <div class="the-icons span3" title="Code: 0xe801"><i class="demo-icon icon-moon">&#xe801;</i> <span class="i-name">icon-moon</span><span class="i-code">0xe801</span></div>
+        <div class="the-icons span3" title="Code: 0xe802"><i class="demo-icon icon-moon-inv">&#xe802;</i> <span class="i-name">icon-moon-inv</span><span class="i-code">0xe802</span></div>
         <div class="the-icons span3" title="Code: 0xf16d"><i class="demo-icon icon-instagram">&#xf16d;</i> <span class="i-name">icon-instagram</span><span class="i-code">0xf16d</span></div>
       </div>
     </div>
