--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./fontello/css/fontello.css">
+    <link rel="stylesheet" href="./css/bright.css">
     <title>PROFILE</title>
 </head>
 <body>
