--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/resume.css">
+    <link rel="stylesheet" href="./fontello/css/fontello.css">
+    <link rel="stylesheet" href="./css/bright.css">
     <title>Resume</title>
 </head>
 <body>
@@ -18,6 +20,7 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="resume.html">RESUME</a></li>
                 <li><a href="project.html">PROJECT</a></li>
+                <i class="icon-moon-inv"></i>
             </ul>
             <div class="burger">
                 <div class="burger1"></div>
