project.js link

--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/project.css">
     <link rel="stylesheet" href="./fontello/css/fontello.css">
     <link rel="stylesheet" href="./css/bright.css">
-    <title>Project</title>
+    <title>PROJECT</title>
 </head>
 <body>
     <header>
@@ -31,25 +31,25 @@
     </header>
 
     <main>
-        <article class="project">
+        <article class="project" onclick="showProject('damparking')">
             <img src="./image/damparking.JPG" alt="php" />
             <h2>DamParking</h2>
             PHP PROJECT
         </article>
 
-        <article class="project">
+        <article class="project" onclick="showProject('pianotile')">
             <img src="./image/pianotile.JPG" alt="c" />
             <h2>PianoTile</h2>
             C PROJECT
         </article>
 
-        <article class="project">
+        <article class="project" onclick="showProject('portfolio')">
             <img src="./image/portfolio.JPG" alt="html" />
             <h2>HadamPortfolio</h2>
             HTML PROJECT
         </article>
 
-        <article class="project">
+        <article class="project" onclick="showProject('hahaparking')">
             <img src="./image/hahaparking.jpg" alt="java" />
             <h2>HahaParking</h2>
             JAVA PROJECT
@@ -73,5 +73,7 @@
     </footer>
 
     <script src="nav.js"></script>
+    <script src="mode.js"></script>
+    <script src="project.js"></script>
 </body>
 </html>
