--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="resume.html">RESUME</a></li>
                 <li><a href="project.html">PROJECT</a></li>
-                <i class="icon-moon-inv"></i>
+                <i id="mode-btn" class="icon-moon-inv"></i>
             </ul>
             <div class="burger">
                 <div class="burger1"></div>
@@ -59,8 +59,8 @@
                     </div>
                 </li>
             </ul>
-        </main>
-    </div>
+        </section>
+    </main>
 
     <footer>
         <ul class="footer-lists">
@@ -79,5 +79,6 @@
     </footer>
 
     <script src="nav.js"></script>
+    <script src="mode.js"></script>
 </body>
 </html>
