--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="resume.html">RESUME</a></li>
                 <li><a href="project.html">PROJECT</a></li>
-                <i class="icon-moon-inv"></i>
+                <i id="mode-btn" class="icon-moon-inv"></i>
             </ul>
             <div class="burger">
                 <div class="burger1"></div>
