--- a/fontello/demo.html
+++ b/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?42039135');
-      src: url('./font/fontello.eot?42039135#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?42039135') format('woff'),
-           url('./font/fontello.ttf?42039135') format('truetype'),
-           url('./font/fontello.svg?42039135#fontello') format('svg');
+      src: url('./font/fontello.eot?37740207');
+      src: url('./font/fontello.eot?37740207#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?37740207') format('woff'),
+           url('./font/fontello.ttf?37740207') format('truetype'),
+           url('./font/fontello.svg?37740207#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -301,6 +301,12 @@ body {
         <div class="the-icons span3" title="Code: 0xe800"><i class="demo-icon icon-facebook-circled">&#xe800;</i> <span class="i-name">icon-facebook-circled</span><span class="i-code">0xe800</span></div>
         <div class="the-icons span3" title="Code: 0xe801"><i class="demo-icon icon-moon">&#xe801;</i> <span class="i-name">icon-moon</span><span class="i-code">0xe801</span></div>
         <div class="the-icons span3" title="Code: 0xe802"><i class="demo-icon icon-moon-inv">&#xe802;</i> <span class="i-name">icon-moon-inv</span><span class="i-code">0xe802</span></div>
+        <div class="the-icons span3" title="Code: 0xe803"><i class="demo-icon icon-left-open">&#xe803;</i> <span class="i-name">icon-left-open</span><span class="i-code">0xe803</span></div>
+      </div>
+      <div class="row">
+        <div class="the-icons span3" title="Code: 0xe804"><i class="demo-icon icon-right-open">&#xe804;</i> <span class="i-name">icon-right-open</span><span class="i-code">0xe804</span></div>
+        <div class="the-icons span3" title="Code: 0xf10c"><i class="demo-icon icon-circle-empty">&#xf10c;</i> <span class="i-name">icon-circle-empty</span><span class="i-code">0xf10c</span></div>
+        <div class="the-icons span3" title="Code: 0xf111"><i class="demo-icon icon-circle">&#xf111;</i> <span class="i-name">icon-circle</span><span class="i-code">0xf111</span></div>
         <div class="the-icons span3" title="Code: 0xf16d"><i class="demo-icon icon-instagram">&#xf16d;</i> <span class="i-name">icon-instagram</span><span class="i-code">0xf16d</span></div>
       </div>
     </div>
