--- a/project/damparking.html
+++ b/project/damparking.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/detail.css">
     <link rel="stylesheet" href="../css/bright.css">
+    <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../fontello/css/fontello.css">
     <title>DAMPARKING</title>
 </head>
@@ -12,12 +14,12 @@
     <header>
         <nav>
             <div class="logo">
-                <h4><a href="index.html">PORTFOLIO</a></h4>
+                <h4><a href="../index.html">PORTFOLIO</a></h4>
             </div>
             <ul class="nav-lists">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="resume.html">RESUME</a></li>
-                <li><a href="project.html">PROJECT</a></li>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="../resume.html">RESUME</a></li>
+                <li><a href="../project.html">PROJECT</a></li>
                 <i id="mode-btn" class="icon-moon-inv"></i>
             </ul>
             <div class="burger">
@@ -29,16 +31,28 @@
     </header>
 
     <main>
-        <div class="img-slide">
-            <i class="icon-left-open"></i>
-            <div class="project-img">
-                <img src="../image/damparking.JPG" alt="">
+        <section>
+            <div class="img-slide">
+                <i class="icon-left-open"></i>
+                <div class="project-img">
+                    <ul class="images">
+                        <li>
+                            <img src="../image/damparking.JPG" alt="damparking">
+                        </li>
+                        <li>
+                            <img src="../image/hahaparking.jpg" alt="">
+                        </li>
+                        <li>
+                            <img src="../image/pianotile.JPG" alt="">
+                        </li>
+                    </ul>
+                </div>
+                <i class="icon-right-open"></i>
             </div>
-            <i class="icon-right-open"></i>
-        </div>
-        <div class="details">
-
-        </div>
+            <div class="details">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni iure itaque magnam tenetur saepe architecto amet explicabo consequuntur dolorem nemo, eius molestiae rerum possimus omnis est perspiciatis similique. Tenetur, veniam.
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -57,7 +71,8 @@
         </div>
     </footer>
 
-    <script src="nav.js"></script>
-    <script src="mode.js"></script>
+    <script src="../nav.js"></script>
+    <script src="../mode.js"></script>
+    <script src="slide.js"></script>
 </body>
 </html>
