볕뉘학교 추가

--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,10 @@
         <section id="resume">
             <ul class="resume-lists">
                 <li>
-                    <h3>2013</h3> 송남초등학교 입학
+                    <h3>2010</h3> 볕뉘학교 입학
+                </li>
+                <li>
+                    <h3>2013</h3> 송남초등학교 전학
                 </li>
                 <li>
                     <h3>2016</h3> 송남중학교 입학
