프로젝트별 사진, 설명 추가

--- a/project/damparking.html
+++ b/project/damparking.html
@@ -37,20 +37,28 @@
                 <div class="project-img">
                     <ul class="images">
                         <li>
-                            <img src="../image/damparking.JPG" alt="damparking">
+                            <img src="../image/damparking2.JPG" alt="">
                         </li>
                         <li>
-                            <img src="../image/hahaparking.jpg" alt="">
+                            <img src="../image/damparking3.JPG" alt="">
                         </li>
                         <li>
-                            <img src="../image/pianotile.JPG" alt="">
+                            <img src="../image/damparking1.JPG" alt="damparking">
+                        </li>
+                        <li>
+                            <img src="../image/damparking4.JPG" alt="">
+                        </li>
+                        <li>
+                            <img src="../image/damparking5.JPG" alt="">
                         </li>
                     </ul>
                 </div>
                 <i class="icon-right-open"></i>
             </div>
             <div class="details">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni iure itaque magnam tenetur saepe architecto amet explicabo consequuntur dolorem nemo, eius molestiae rerum possimus omnis est perspiciatis similique. Tenetur, veniam.
+                <h1>DAMPARKING</h1>
+                PHP를 이용해 만든 주차장 예매 서비스. JAVA 프로젝트인 HAHAPARKING을 보완하기 위해 MySQL과 PHP를 이용함. 회원가입, 로그인, 패스워드 찾기, 회원정보 수정, 로그아웃, 포인트 적립, 회원 탈퇴, 자리 예매, 시간 선택 및 추가, 결제, 주차 위치 확인, 남은 시간 확인, 벌금 지불 등의 기능이 있음.
+                <p> ~ 2020년 1월 8일</p>
             </div>
         </section>
     </main>
