프로젝트 순서 정리

--- a/project.html
+++ b/project.html
@@ -31,8 +31,14 @@
     </header>
 
     <main>
+        <article class="project" onclick="showProject('hahaparking')">
+            <img src="./image/hahaparking4.JPG" alt="java" />
+            <h2>HahaParking</h2>
+            JAVA PROJECT
+        </article>
+
         <article class="project" onclick="showProject('damparking')">
-            <img src="./image/damparking.JPG" alt="php" />
+            <img src="./image/damparking1.JPG" alt="php" />
             <h2>DamParking</h2>
             PHP PROJECT
         </article>
@@ -44,15 +50,9 @@
         </article>
 
         <article class="project" onclick="showProject('portfolio')">
-            <img src="./image/portfolio.JPG" alt="html" />
-            <h2>HadamPortfolio</h2>
+            <img src="./image/portfolio1.JPG" alt="html" />
+            <h2>Portfolio</h2>
             HTML PROJECT
-        </article>
-
-        <article class="project" onclick="showProject('hahaparking')">
-            <img src="./image/hahaparking.jpg" alt="java" />
-            <h2>HahaParking</h2>
-            JAVA PROJECT
         </article>
     </main>
 
