--- a/project.html
+++ b/project.html
@@ -44,7 +44,7 @@
         </article>
 
         <article class="project" onclick="showProject('pianotile')">
-            <img src="./image/pianotile.JPG" alt="c" />
+            <img src="./image/pianotile2.JPG" alt="c" />
             <h2>PianoTile</h2>
             C PROJECT
         </article>
