--- a/project/pianotile.html
+++ b/project/pianotile.html
@@ -37,7 +37,16 @@
                 <div class="project-img">
                     <ul class="images">
                         <li>
-                            <img src="../image/pianotile.JPG" alt="">
+                            <img src="../image/pianotile1.JPG" alt="menu">
+                        </li>
+                        <li>
+                            <img src="../image/pianotile3.JPG" alt="게임 방법">
+                        </li>
+                        <li>
+                            <img src="../image/pianotile2.JPG" alt="플레이 화면">
+                        </li>
+                        <li>
+                            <img src="../image/pianotile4.JPG" alt="랭킹">
                         </li>
                     </ul>
                 </div>
@@ -45,6 +54,7 @@
             </div>
             <div class="details">
                 <h1>PIANOTILE</h1>
+                C를 이용해 만든 콘솔 게임 프로젝트. 화살표 키를 이용해 네모난 틀 안에서 내려오는 타일과 같은 위치에 블럭을 위치시켜 점수를 얻는 게임. 단계별로 타일이 내려오는 속도가 빨라지며 같은 위치에 블럭을 위치시키지 못한 횟수가 5번이면 게임이 종료됨. 파일 입출력을 이용해 랭킹을 구현함.
                 <p>2020년 1월 6일 ~ 2020년 1월 19일</p>
             </div>
         </section>
