--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,16 @@
             <ul class="nav-lists">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="resume.html">RESUME</a></li>
-                <li><a href="project.html">PROJECT</a></li>
+                <li>
+                    <div class="nav-project">
+                        <a href="#">PROJECT</a>
+                        <ul class="dropdown">
+                            <li><a href="freshman.html">FRESHMAN</a></li>
+                            <li><a href="#">SOPHOMORE</a></li>
+                            <li><a href="#">SENIORS</a></li>
+                        </ul>
+                    </div>
+                </li>
                 <i id="mode-btn" class="icon-moon-inv"></i>
             </ul>
             <div class="burger">
