--- a/project/pianotile.html
+++ b/project/pianotile.html
@@ -14,18 +14,18 @@
     <header>
         <nav>
             <div class="logo">
-                <h4><a href="index.html">PORTFOLIO</a></h4>
+                <h4><a href="../index.html">PORTFOLIO</a></h4>
             </div>
             <ul class="nav-lists">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="resume.html">RESUME</a></li>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="../resume.html">RESUME</a></li>
                 <li>
                     <div class="nav-project">
                         <a href="#">PROJECT</a>
                         <ul class="dropdown">
-                            <li><a href="freshman.html">FRESHMAN</a></li>
-                            <li><a href="#">SOPHOMORE</a></li>
-                            <li><a href="#">SENIORS</a></li>
+                            <li><a href="../1st.html">1ST GRADE</a></li>
+                            <li><a href="#">2ND GRADE</a></li>
+                            <li><a href="#">3RD GRADE</a></li>
                         </ul>
                     </div>
                 </li>
