--- a/resume.html
+++ b/resume.html
@@ -23,9 +23,9 @@
                     <div class="nav-project">
                         <a href="#">PROJECT</a>
                         <ul class="dropdown">
-                            <li><a href="freshman.html">FRESHMAN</a></li>
-                            <li><a href="#">SOPHOMORE</a></li>
-                            <li><a href="#">SENIORS</a></li>
+                            <li><a href="1st.html">1ST GRADE</a></li>
+                            <li><a href="#">2ND GRADE</a></li>
+                            <li><a href="#">3RD GRADE</a></li>
                         </ul>
                     </div>
                 </li>
